# nui

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
example/: basic.cpp
include/nui/core/: NUIApp  NUIObject  NUITypes.hpp  NUIWindow
include/nui/core/events/: NUIChildEvent.hpp  NUIEvent.hpp  NUIKeyEvent.hpp  NUIMoveEvent.hpp  NUIPaintEvent.hpp  NUIResizeEvent.hpp
include/nui/gui/: NUIApp  NUIColor.hpp  NUILabel  NUIObject  NUIPoint.hpp  NUIRow.hpp  NUIWindow
include/nui/widgets/: NUILabel  NUIRow.hpp  NUIWidget.hpp  NUIWindow
src/core/: nuiapp.cpp  nuiobject.cpp  nuiwindow.cpp
src/gui/: nuiapp.cpp  nuilabel.cpp  nuiobject.cpp  nuirow.cpp  nuiwindow.cpp
src/widgets/: NUIWidget.cpp  nuilabel.cpp  nuiwindow.cpp
test/: CMakeLists.txt  nuitest.cpp  tst_nuiobject.cpp
